<resources>
    <string name="app_name">CHS Pharmacy</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter customer id</string>
    <string name="button_send">Send</string>
    <string name="nameText">Name</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="title_activity_peripheral">Peripheral</string>


    <!--values for the patient view-->
    <string name="patient_name">Patient Name</string>
    <string name="rxid">Prescription ID</string>
    <string name="confirm_patient">Confirm Data</string>
    <string name="patient_id">Patient ID</string>
    <string name="quantity">Quantity</string>
    <string name="refills">Refills</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="label">Label</string>
    <string name="dosage_text">Dosage</string>
    <string name="ndc">NDC</string>
    <string name="find_ble">Confirm and Find Caps</string>
    <string name="scan">Scan</string>
    <string name="bleAddress">BLE Address</string>
    <string name="bleName">BLE name</string>
    <string name="bleRSSI">ble RSSI</string>
    <string name="HOA1">HOA1</string>
    <string name="HOA2">HOA2</string>
    <string name="HOA3">HOA3</string>
    <string name="npi">NPI</string>

</resources>
